tests/ui/simd/repr-simd-on-enum.stderr
error: `#[repr]` attribute cannot be used on enums
  --> $DIR/repr-simd-on-enum.rs:5:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to structs

error: aborting due to 1 previous error

